Fix alignment of play controls, and add user-configurable key shortcuts for play, pause, prev, next, volup, and voldown
git-svn-id: http://svn.code.sf.net/p/rompr/code/trunk@64 94fc339e-1912-44e7-90be-6e134bb66470

--- a/Darkness.css
+++ b/Darkness.css
@@ -871,3 +871,19 @@ input.sourceform:hover
     border-right:1px solid #ff3600;
     border-top:1px solid #ff3600;
 }
+
+/*-- Key bindings editor --*/
+
+#keybpu
+{
+    position:absolute;
+    display:none;
+    z-index:1001;
+    background:#878787;
+    border-radius: 5px 5px 5px 5px;
+    padding:12px;
+}
+
+
+
+
